<resources>
    <string name="app_name">PP3 PartyPlanner</string>
    <string name="whoHostsTheParty">Hvem afholder festen?</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="defaultAddButtonDescription">Default Add Button</string>
   <string name="deleteIconDescription">deleteIcon</string>
    <string name="DeleteGuest">Slet gæst</string>
    <string name="createNewUserTitleText">Opret ny bruger</string>
    <string name="createNewUserTextButton">Opret bruger</string>
    <string name="alertNoEmptyFieldTitleText">Husk at udfylde alle felter</string>
    <string name="alertNoEmptyFieldsAndMinPasswordText">Alle felter skal udfyldes og kodeordet skal minimum indeholde 8 tegn</string>
    <string name="confirmTextFromAlert">Forstået!</string>
    <string name="alertSignupFailTitleText">Hov</string>
    <string name="alertSignupFailTextMessage">Der skete en fejl da vi tilmeldte dig prøv igen</string>
    <string name="alertSignupFailConfirm">Ok</string>
    <string name="fullNameTextField">Indtast fulde navn</string>
    <string name="emailTextField">Indtast e-mail addresse</string>
    <string name="newPasswordTextField">Indtast kodeord</string>
    <string name="repeatPasswordTextField">Gentag kodeord</string>
    <string name="logInButtonText">Log ind</string>
    <string name="createNewUserButtonText">Opret ny bruger</string>
    <string name="usernameTextField">Indtast brugernavn</string>
    <string name="insertPasswordTextField">Indtast password</string>
    <string name="choosePartyTypeText">Hvilken type fest vil du holde?</string>
    <string name="createPartyNextButtonText">Næste</string>
    <string name="createPartyAddHostText">Tilføj vært</string>
    <string name="choosePartyTypeDropDownText">Vælg begivenhed</string>
    <string name="choosePartyTitleText">Vælg titel på begivenheden</string>
    <string name="chooseAdressOnCreatePartyTextField">Adresse på begivenheden</string>
    <string name="chooseZipCodeOnCreatePartyText">Post nr</string>
    <string name="chooseCityOnCreatePartyText">By</string>
    <string name="createPartyButtonText">Opret begivenhed</string>
    <string name="congratulationsOnCreatePartyTitleText">Tillykke!</string>
    <string name="congratulationsOnCreatePartyMessageText">Din begivenhed er nu oprettet</string>
    <string name="completeLogoOnCreateParty">CompleteLogoCheckMark</string>
    <string name="alarmLogoDescription">Select Time</string>
    <string name="dateRangeLogoDescription">Select Date</string>
    <string name="budgetDialogDescriptionText">Beskrivelse:</string>
    <string name="budgetChooseDescriptionTextField">Vælg beskrivelse</string>
    <string name="budgetAddExpectedTotalBudgetText">Tilføj forventet total budget</string>
    <string name="budgetForPartyTextField">Budget for festen</string>
    <string name="budgetAddExpensePostText">Tilføj en udgiftspost</string>
    <string name="budgetChooseNameForExpensePost">Indtast navn på udgiftsposten</string>
    <string name="wishName">Indtast navn på ønske</string>
    <string name="wishLink">Evt. Link til ønsket</string>
    <string name="wishPrice">Pris på ønsket</string>
    <string name="addDesricption">Tilføj en beskrivelse</string>
 <string name="addWish">Tilføj Ønske</string>
 <string name="addPhoto">add photo</string>
 <string name="birthday">Fødselsdag</string>
 <string name="wedding">Bryllup</string>
 <string name="confirmation">Konfirmation</string>
 <string name="baptism">Dåb</string>
 <string name="otherEvent">Anden begivenhed</string>
 <string name="pickDate">Vælg dato : </string>
 <string name="pickStartTime">Vælg starttidspunkt :</string>
 <string name="guestParticipating">Du deltager til denne begivenhed</string>
 <string name="guestNotAttending">Du deltager ikke til denne begivenhed</string>
 <string name="participating">Deltager</string>
 <string name="notParticipating">Deltager ikke</string>
 <string name="cancelAppointment">Meld afbud</string>
 <string name="participate">Deltag</string>
 <string name="wishList">Ønskeliste</string>
 <string name="wishLogo">WishLogo</string>
 <string name="interrupt">Afbryd</string>
 <string name="create">Opret</string>
 <string name="budget">Budget: </string>
 <string name="budgetUsed">Budget brugt: </string>
 <string name="remainingBudget">Resterende budget: </string>
 <string name="valuta"> kr</string>
 <string name="edit">Ændr</string>
 <string name="budgetDropDown">Dropdown for budget</string>
 <string name="changeDesription">Ændr beskrivelse</string>
 <string name="cancel">Afbud</string>
 <string name="awaits">Afventer</string>
 <string name="invitations">Invitationer</string>
 <string name="inviteGuest">Inviter gæst</string>
 <string name="enterGuestName">Indtast gæstens navn</string>
 <string name="Enter">Indtast </string>
 <string name="sendInvitation">Send Invitation</string>
 <string name="chooseSendingMethod">Vælg forsendelsesmetode</string>
 <string name="regret">Fortryd</string>
 <string name="aboutToDelete">Du er ved at slette</string>
 <string name="wantToDelete">Vil du slette denne gæst?</string>
 <string name="editEvent">Rediger i begivenhed</string>
 <string name="host">Arrangør</string>
 <string name="guest">Gæst</string>
 <string name="choosePicture">Klik ikonet for at vælge billede:</string>
 <string name="link">Link</string>
 <string name="reserve">Reservér</string>
 <string name="reserved">Reserveret</string>
    <string name="linkCouldNotBeOpened">Linket kunne ikke åbnes</string>
 <string name="undoReservation">Fjern reservation</string>
    <string name="delete">Slet</string>
    <string name="warning">Advarsel</string>
    <string name="change">Ændr</string>
    <string name="parties">Fester</string>
 <string name="navigateBack">Navigate back</string>
    <string name="priceofbudgetelement">Pris på post</string>
 <string name="okay">Ok</string>
</resources>